# Crown-Core

./: .gitignore  CLAUDE.md  Cargo.toml  dfx.json
.github/workflows/: ci.yml
config/: mainnet.toml  testnet.toml
contracts/evm/: deploy.toml  foundry.toml
contracts/evm/cache/: solidity-files-cache.json
contracts/evm/src/: Splitter.sol
contracts/evm/test/: Splitter.t.sol
contracts/solana/: Anchor.toml  deploy.toml
contracts/solana/programs/splitter/: Cargo.toml  build.rs
contracts/solana/programs/splitter/examples/: donate.rs
contracts/solana/programs/splitter/src/: lib.rs
contracts/solana/programs/splitter/tests/: donate.rs
docs/: build-plan.md  core-spec.md  post-core.md  project-map.md  standards.md
index/: Cargo.toml  build.rs  crown-index.did
index/src/: api.rs  certify.rs  cursor.rs  lib.rs
index/src/source/: evm.rs  mod.rs  solana.rs
index/tests/: certificate.rs
index/tests/fixtures/: donate_devnet.json  escrow_devnet.b64  multi_donate_devnet.json  payout_claim_devnet.json  payout_escrow_devnet.b64  stream_escrow_devnet.b64  stream_release_devnet.json
reduce/: Cargo.toml
reduce/src/: book.rs  event.rs  lib.rs  reduce.rs
scripts/: deploy-evm-sepolia.sh  e2e-attribution.sh  e2e-evm-local.sh  e2e-evm-sepolia.sh  e2e-local.sh  lint-boundaries.sh  lint-evm-opcodes.sh  wasm-cc.sh
