[package]
name = "crown-index"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
crown-reduce = { path = "../reduce" }
candid = "0.10"
ic-cdk = "0.20"
ic-canister-runtime = "0.2"
ic-stable-structures = "0.7"
sol_rpc_client = "6"
sol_rpc_types = "3"
solana-pubkey = "4"
solana-signature = "3"
solana-transaction-status-client-types = "3.1"
bs58 = "0.5"
sha2 = "0.10"
serde_bytes = "0.11"
getrandom = { version = "0.2", features = ["custom"] }

[dev-dependencies]
ic-agent = "0.48"
ic-certification = "3.2.0"
serde_cbor = "0.11.2"
serde_json = "1"
solana-transaction-error = "3"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
