[package]
name = "crown-index"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
crown-reduce = { path = "../reduce" }
candid = "0.10"
ic-cdk = "0.20"
ic-canister-runtime = "0.2"
ic-stable-structures = "0.7"
sol_rpc_client = "6"
sol_rpc_types = "3"
solana-pubkey = "4"
solana-signature = "3"
solana-transaction-status-client-types = "3.1"
bs58 = "0.5"
sha2 = "0.10"
serde_bytes = "0.11"
getrandom = { version = "0.2", features = ["custom"] }
evm_rpc_client = "0.4"
evm_rpc_types = "3.1"
serde = { version = "1", features = ["derive"] }
crown-derive = { version = "0.1.0", path = "../../Crown-Factory/derive" }

[dev-dependencies]
base64 = "0.22"
ic-agent = "0.48"
ic-certification = "3.2.0"
serde_cbor = "0.11.2"
serde_json = "1"
sha3 = "0.10"
solana-transaction-error = "3"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
